--- a/templates/admin/interview_analyzer/view_report.html
+++ b/templates/admin/interview_analyzer/view_report.html
@@ -48,45 +48,38 @@
     });
 
     </script>
-      <div class="accordion">
+
         <div class="css-5277k6 "><p class="MuiTypography-root MuiTypography-body1 css-11pse9l">SANDEEP KUMAR GUPTA's Speaking Insights</p></div>
     <div class="css-1gc0uv4 parent-container">
       <div class="css-9qrd19">
-        <button class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-disableElevation MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-disableElevation css-1q1t9mv" tabindex="0" type="button"><span class="MuiButton-startIcon MuiButton-iconSizeMedium css-1l6c7y9"><div class="MuiBox-root css-1o4lo4k"><svg viewBox="0 0 12 12" fill="none" xmlns="http://www.w3.org/2000/svg" style="width: 14px; height: 14px;"><path d="M1.2 3.6H1.37143C2.03143 3.6 2.57143 4.14 2.57143 4.8V10.8C2.57143 11.46 2.03143 12 1.37143 12H1.2C0.54 12 0 11.46 0 10.8V4.8C0 4.14 0.54 3.6 1.2 3.6ZM6 0C6.66 0 7.2 0.54 7.2 1.2V10.8C7.2 11.46 6.66 12 6 12C5.34 12 4.8 11.46 4.8 10.8V1.2C4.8 0.54 5.34 0 6 0ZM10.8 6.85714C11.46 6.85714 12 7.39714 12 8.05714V10.8C12 11.46 11.46 12 10.8 12C10.14 12 9.6 11.46 9.6 10.8V8.05714C9.6 7.39714 10.14 6.85714 10.8 6.85714Z" fill="#EA1B3D"></path></svg></div></span>Analytics<span class="MuiTouchRipple-root css-w0pj6f"></span></button></div></div>
-        <div class="content-container added-accordion-css">
-            <div class="question">How to pay?</div>
-            <div class="answer">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Assumenda, neque provident nam odit ex,
-                veritatis sit itaque quam ducimus suscipit illo
+        <span class="css-1q1t9mv" tabindex="0"><span class="MuiButton-startIcon MuiButton-iconSizeMedium css-1l6c7y9"><div class="MuiBox-root css-1o4lo4k"><svg viewBox="0 0 12 12" fill="none" xmlns="http://www.w3.org/2000/svg" style="width: 14px; height: 14px;"><path d="M1.2 3.6H1.37143C2.03143 3.6 2.57143 4.14 2.57143 4.8V10.8C2.57143 11.46 2.03143 12 1.37143 12H1.2C0.54 12 0 11.46 0 10.8V4.8C0 4.14 0.54 3.6 1.2 3.6ZM6 0C6.66 0 7.2 0.54 7.2 1.2V10.8C7.2 11.46 6.66 12 6 12C5.34 12 4.8 11.46 4.8 10.8V1.2C4.8 0.54 5.34 0 6 0ZM10.8 6.85714C11.46 6.85714 12 7.39714 12 8.05714V10.8C12 11.46 11.46 12 10.8 12C10.14 12 9.6 11.46 9.6 10.8V8.05714C9.6 7.39714 10.14 6.85714 10.8 6.85714Z" fill="#EA1B3D"></path></svg></div></span>Analytics<span class="MuiTouchRipple-root css-w0pj6f"></span></span></div></div>
+        <div class="card-body">
+          <div class="col-md mb-4 mb-md-0">
+            <div class="accordion mt-3" id="question_answer_accordion">
+             <div
+                class="card accordion-item-sidebar">
+                <h2 class="accordion-header" id="heading_{{ index }}">
+                  <button type="button" class="accordion-button collapsed" data-bs-toggle="collapse"
+                    data-bs-target="#accordion1" aria-expanded="false" aria-controls="accordion1">
+                    <i class="fa fa-commenting" aria-hidden="true" style="color: #aa142d"></i>&nbsp;
+                    Hello this is demo text
+                  </button>
+                </h2>
+            <div id="accordion1" class="accordion-collapse collapse"
+              data-bs-parent="#question_answer_accordion" aria-labelledby="heading_{{ index }}">
+              <div class="accordion-body">
+                <i class="fa fa-commenting" aria-hidden="true" style="color: #228b22"></i>&nbsp;
+                 This is demo interview_transcript
 
-            </div>
-        </div>
-
-
-        <div class="content-container added-accordion-css">
-            <div class="question">How to complain?</div>
-            <div class="answer">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Assumenda, neque provident nam odit ex,
-                veritatis sit itaque quam ducimus suscipit illo
-
-            </div>
-        </div>
-
-
-        <div class="content-container added-accordion-css">
-            <div class="question">How to refund?</div>
-            <div class="answer">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Assumenda, neque provident nam odit ex,
-                veritatis sit itaque quam ducimus suscipit illo
-                error quis ratione vero debitis
+              </div>
             </div>
         </div>
 
       </div>
+    </div>
     <!-- /#sidebar-wrapper -->
-
   </div>
-</div>
+
 
 
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
