--- a/templates/admin/interview_analyzer/view_report.html
+++ b/templates/admin/interview_analyzer/view_report.html
@@ -53,34 +53,25 @@
     <div class="css-1gc0uv4 parent-container">
       <div class="css-9qrd19">
         <button class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-disableElevation MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-disableElevation css-1q1t9mv" tabindex="0" type="button"><span class="MuiButton-startIcon MuiButton-iconSizeMedium css-1l6c7y9"><div class="MuiBox-root css-1o4lo4k"><svg viewBox="0 0 12 12" fill="none" xmlns="http://www.w3.org/2000/svg" style="width: 14px; height: 14px;"><path d="M1.2 3.6H1.37143C2.03143 3.6 2.57143 4.14 2.57143 4.8V10.8C2.57143 11.46 2.03143 12 1.37143 12H1.2C0.54 12 0 11.46 0 10.8V4.8C0 4.14 0.54 3.6 1.2 3.6ZM6 0C6.66 0 7.2 0.54 7.2 1.2V10.8C7.2 11.46 6.66 12 6 12C5.34 12 4.8 11.46 4.8 10.8V1.2C4.8 0.54 5.34 0 6 0ZM10.8 6.85714C11.46 6.85714 12 7.39714 12 8.05714V10.8C12 11.46 11.46 12 10.8 12C10.14 12 9.6 11.46 9.6 10.8V8.05714C9.6 7.39714 10.14 6.85714 10.8 6.85714Z" fill="#EA1B3D"></path></svg></div></span>Analytics<span class="MuiTouchRipple-root css-w0pj6f"></span></button></div></div>
-        <div class="content-container added-accordion-css">
-            <div class="question">How to pay?</div>
-            <div class="answer">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Assumenda, neque provident nam odit ex,
-                veritatis sit itaque quam ducimus suscipit illo
-
+          {% if analysis_data %}
+            <div class="content-container added-accordion-css">
+                <div class="question">Weak Words</div>
+                <div class="answer">
+                    {% for weak in analysis_data['weak_words'] %}
+                        <span class="badge btn-danger words_rounded" style="border-radius: 20px !important;background-color: #dddddd;color: #000000;"><span style="background-color: #fff;border-radius: 50%;padding: 2px 10px;height: 5px;margin-right: 10px;">{{ weak['count'] }}</span> {{ weak['word'] }}</span>
+                    {% endfor %}
+                </div>
             </div>
-        </div>
 
-
-        <div class="content-container added-accordion-css">
-            <div class="question">How to complain?</div>
-            <div class="answer">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Assumenda, neque provident nam odit ex,
-                veritatis sit itaque quam ducimus suscipit illo
-
-            </div>
-        </div>
-
-
-        <div class="content-container added-accordion-css">
-            <div class="question">How to refund?</div>
-            <div class="answer">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Assumenda, neque provident nam odit ex,
-                veritatis sit itaque quam ducimus suscipit illo
-                error quis ratione vero debitis
-            </div>
-        </div>
+               <div class="content-container added-accordion-css">
+                     <div class="question">Filler Words</div>
+                        <div class="answer">
+                            {% for filler in analysis_data['filler_words'] %}
+                                <span class="badge btn-danger words_rounded" style="border-radius: 20px !important;background-color: #dddddd;color: #000000;"><span style="background-color: #fff;border-radius: 50%;padding: 2px 10px;height: 5px;margin-right: 10px;">{{ filler['count'] }}</span> {{ filler['word'] }}</span>
+                            {% endfor %}
+                        </div>
+                    </div>
+          {% endif %}
 
       </div>
     <!-- /#sidebar-wrapper -->
