show filler word by speaker

--- a/templates/admin/interview_analyzer/view_report.html
+++ b/templates/admin/interview_analyzer/view_report.html
@@ -6,7 +6,7 @@
   <!-- Create a container for the button and title -->
 <div class="title-container">
   <div class="header">
-    <h4>Report | Smart Interview Assessment</h4>
+    <h4 style="visibility: hidden;">Report | Smart Interview Assessment</h4>
     <a href="#menu-toggle" class="added-css added-css1 btn btn-secondary float-right" id="menu-toggle" style="background: #373742"><i class="fa fa-arrow-circle-left icon fa-lg" aria-hidden="true"></i> Insights</a>
   </div>
   <div id="wrapper">
